--- a/index.html
+++ b/index.html
@@ -7,24 +7,37 @@
 	<title>Waxom</title>
 </head>
 <body>
-	<div class="slider">
-	<div class="header">
-		<div class="header__section">
-			<div class="header__item headerLogo">Wahom</div>
-			<div class="header__item headerButton"><a href="index.html">Home</a></div>
-			<div class="header__item headerButton"><a href="#">About Us</a></div>
-			<div class="header__item headerButton"><a href="#">Portfolio</a></div>
-			<div class="header__item headerButton"><a href="#">Features</a></div>
-			<div class="header__item headerButton"><a href="#">Blog</a></div>
-			<div class="header__item headerButton"><a href="#">Pricing</a></div>
-			<div class="header__item headerButton"><a href="#">Shortcodes</a></div>
-			<div class="header__item headerButton"><a href="#">Contact</a></div>
+	
+	<div class="wrapper"> <!-- обёртка сайта -->
+		<div class="container"> <!-- рамки содержимого на сайте -->
+			<div class="first-block"> <!-- первый блок -->
+				<div class="header"> <!-- шапка -->
+					<div class="header-logo"> <!-- логотип -->
+						<img class="header-logo__img" src="img/logo.png">
+					</div>
+					<div class="header-menu"> <!-- меню -->
+						<ul class="header-menu__list">
+							<li class="header-menu__item"><a class="header-menu__link">Home</a></li>
+							<li class="header-menu__item"><a class="header-menu__link">About Us</a></li>
+							<li class="header-menu__item"><a class="header-menu__link">Portfolio</a></li>
+							<li class="header-menu__item"><a class="header-menu__link">Features</a></li>
+							<li class="header-menu__item"><a class="header-menu__link">Blog</a></li>
+							<li class="header-menu__item"><a class="header-menu__link">Pricing</a></li>
+							<li class="header-menu__item"><a class="header-menu__link">Shortcodes</a></li>
+							<li class="header-menu__item"><a class="header-menu__link">Contact</a></li>
+						</ul>
+						<div class="header-search"> <!-- иконки справа от меню -->
+							<a class="header-search__icon_shopping-basket"></a>
+							<a class="header-search__icon_search"></a>
+						</div>
+					</div>
+				</div>
+				<div class="slider"></div>
+			</div>
 		</div>
-		<div class="header__section">
-			<div class="header__item shoppingCartIcon"><a href="#"><img src="#img/shopping-cart.png" alt="Cart"></a></div>
-			<div class="header__item searchIcon"><a href="#"><img src="#img/search.png" alt="Search"></a></div>
-		</div>
-	</div>
+
+
+		<div class="second-block"></div>
 	</div>
 	<script type="text/javascript" src="script.js"></script>
 </body>
