--- a/index.html
+++ b/index.html
@@ -9,30 +9,31 @@
 <body>
 	
 	<div class="wrapper"> <!-- обёртка сайта -->
-		<div class="container"> <!-- рамки содержимого на сайте -->
 			<div class="first-block"> <!-- первый блок -->
-				<div class="header"> <!-- шапка -->
-					<div class="header-logo"> <!-- логотип -->
-						<img class="header-logo__img" src="img/logo.png">
-					</div>
-					<div class="header-menu"> <!-- меню -->
-						<ul class="header-menu__list">
-							<li class="header-menu__item"><a class="header-menu__link">Home</a></li>
-							<li class="header-menu__item"><a class="header-menu__link">About Us</a></li>
-							<li class="header-menu__item"><a class="header-menu__link">Portfolio</a></li>
-							<li class="header-menu__item"><a class="header-menu__link">Features</a></li>
-							<li class="header-menu__item"><a class="header-menu__link">Blog</a></li>
-							<li class="header-menu__item"><a class="header-menu__link">Pricing</a></li>
-							<li class="header-menu__item"><a class="header-menu__link">Shortcodes</a></li>
-							<li class="header-menu__item"><a class="header-menu__link">Contact</a></li>
-						</ul>
-						<div class="header-search"> <!-- иконки справа от меню -->
-							<a class="header-search__icon_shopping-basket"></a>
-							<a class="header-search__icon_search"></a>
+				<div class="container"> <!-- обёртка для содержимого в первом блоке -->
+					<div class="header"> <!-- шапка -->
+						<div class="header-logo"> <!-- логотип -->
+							<img class="header-logo__img" src="img/logo.png">
 						</div>
-					</div>
+						<div class="header-menu"> <!-- меню -->
+							<ul class="header-menu__list">
+								<li class="header-menu__item"><a class="header-menu__link">Home</a></li>
+								<li class="header-menu__item"><a class="header-menu__link">About Us</a></li>
+								<li class="header-menu__item"><a class="header-menu__link">Portfolio</a></li>
+								<li class="header-menu__item"><a class="header-menu__link">Features</a></li>
+								<li class="header-menu__item"><a class="header-menu__link">Blog</a></li>
+								<li class="header-menu__item"><a class="header-menu__link">Pricing</a></li>
+								<li class="header-menu__item"><a class="header-menu__link">Shortcodes</a></li>
+								<li class="header-menu__item"><a class="header-menu__link">Contact</a></li>
+							</ul>
+							<div class="header-search"> <!-- иконки справа от меню -->
+								<a class="header-search__icon_shopping-basket"></a>
+								<a class="header-search__icon_search"></a>
+							</div>
+						</div>
 				</div>
-				<div class="slider"></div>
+				<!-- <div class="slider"></div> -->
+				</div>
 			</div>
 		</div>
 
