header is complete

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
 	
 	<div class="wrapper"> <!-- обёртка сайта -->
-			<div class="first-block"> <!-- первый блок -->
-				<div class="container"> <!-- обёртка для содержимого в первом блоке -->
+		<div class="section section_background_first-block"> <!-- обертка для блока -->
+			<div class="container"> <!-- обёртка для содержимого в первом блоке -->
+				<div class="first-block"> <!-- первый блок -->
 					<div class="header"> <!-- шапка -->
 						<div class="header-logo"> <!-- логотип -->
 							<img class="header-logo__img" src="img/logo.png">
@@ -31,14 +32,19 @@
 								<a class="header-search__icon_search"></a>
 							</div>
 						</div>
-				</div>
-				<!-- <div class="slider"></div> -->
+					</div>
 				</div>
 			</div>
 		</div>
 
+		<div class="section">
+			<div class="container">
+				<div class="second-block">
 
-		<div class="second-block"></div>
+				</div>
+			</div>
+		</div>
+		
 	</div>
 	<script type="text/javascript" src="script.js"></script>
 </body>
