--- a/index.html
+++ b/index.html
@@ -33,6 +33,17 @@
 							</div>
 						</div>
 					</div>
+					<div class="section">
+						<div class="slogan">
+							<pre>
+								<span class="slogan_firstRow">Unique and Modern Design</span>
+								<span class="slogan_secondRow">Portfolio PSD Template</span>
+								<span class="slogan_thirdRow">Nam liber tempor cum soluta nihil imper-</span>
+								<span class="slogan_fourthRow">diet doming id quod mazim placerat facer possim assum.</span>
+							</pre>
+						</div>
+						<div class="button"></div>
+					</div>
 				</div>
 			</div>
 		</div>
