header + hero_section

--- a/index.html
+++ b/index.html
@@ -34,13 +34,9 @@
 						</div>
 					</div>
 					<div class="section">
-						<div class="slogan">
-							<pre>
-								<span class="slogan_firstRow">Unique and Modern Design</span>
-								<span class="slogan_secondRow">Portfolio PSD Template</span>
-								<span class="slogan_thirdRow">Nam liber tempor cum soluta nihil imper-</span>
-								<span class="slogan_fourthRow">diet doming id quod mazim placerat facer possim assum.</span>
-							</pre>
+						<div class="hero__main-text">
+								<h1><span>Unique and Modern Design</span><br>Portfolio PSD Template</h1>
+								<p>Nam liber tempor cum soluta nihil imper- diet&nbsp;doming&nbsp;id quod mazim placerat facer possim assum.</p>
 						</div>
 						<div class="button"></div>
 					</div>
